--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+
 body {
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Playfair Display', serif;
   background-color: #ffffff;
   color: #333333;
   line-height: 1.6;
@@ -46,6 +47,7 @@ h2 {
 a {
   color: #0066cc;
   text-decoration: none;
+  font-family: 'Playfair Display', serif;
 }
 
 a:hover {
@@ -59,6 +61,7 @@ footer {
   font-size: 0.9rem;
   color: #777777;
 }
+
 .vin-photo {
   width: 100%;
   max-width: 500px;
