--- a/style_corrige.css
+++ b/style_corrige.css
@@ -76,6 +76,18 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1);
 }
+.fiche-bouteille {
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.bouteille-img {
+  width: 300px;
+  max-width: 100%;
+  margin: 1rem 0;
+  border-radius: 8px;
+  box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+}
 
 form input,
 form textarea {
